fix: aligned elements at center

--- a/src/index.css
+++ b/src/index.css
@@ -192,6 +192,11 @@
   }
 }
 
+.slick-track {
+  display: flex;
+  align-items: center;
+}
+
 .slick-arrow.slick-next::before,
 .slick-arrow.slick-prev::before {
   content: "";
